---
source: src/parser.rs
assertion_line: 2262
expression: "parse(\"\\\nlet x = a\n  x\nx\")"
---
Input:

let x = a
  x
x

Result:

Node {
    start: Index(
        0,
    ),
    end: Index(
        5,
    ),
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Let(
            [
                Untyped(
                    Pattern(
                        Node {
                            start: Index(
                                1,
                            ),
                            end: Index(
                                1,
                            ),
                            value: Identifier(
                                Node {
                                    start: Index(
                                        1,
                                    ),
                                    end: Index(
                                        1,
                                    ),
                                    value: Identifier_ {
                                        name: SymbolU32 {
                                            value: 1,
                                        },
                                    },
                                },
                            ),
                        },
                        Node {
                            start: Index(
                                3,
                            ),
                            end: Index(
                                4,
                            ),
                            value: Expression_ {
                                typ: RefCell {
                                    value: None,
                                },
                                expr: FnCall(
                                    Node {
                                        start: Index(
                                            3,
                                        ),
                                        end: Index(
                                            3,
                                        ),
                                        value: Expression_ {
                                            typ: RefCell {
                                                value: None,
                                            },
                                            expr: Identifier(
                                                None,
                                                Identifier(
                                                    Node {
                                                        start: Index(
                                                            3,
                                                        ),
                                                        end: Index(
                                                            3,
                                                        ),
                                                        value: Identifier_ {
                                                            name: SymbolU32 {
                                                                value: 2,
                                                            },
                                                        },
                                                    },
                                                ),
                                            ),
                                        },
                                    },
                                    [
                                        Node {
                                            start: Index(
                                                4,
                                            ),
                                            end: Index(
                                                4,
                                            ),
                                            value: Expression_ {
                                                typ: RefCell {
                                                    value: None,
                                                },
                                                expr: Identifier(
                                                    None,
                                                    Identifier(
                                                        Node {
                                                            start: Index(
                                                                4,
                                                            ),
                                                            end: Index(
                                                                4,
                                                            ),
                                                            value: Identifier_ {
                                                                name: SymbolU32 {
                                                                    value: 1,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                ),
                                            },
                                        },
                                    ],
                                ),
                            },
                        },
                    ),
                ),
            ],
            Node {
                start: Index(
                    5,
                ),
                end: Index(
                    5,
                ),
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Identifier(
                        None,
                        Identifier(
                            Node {
                                start: Index(
                                    5,
                                ),
                                end: Index(
                                    5,
                                ),
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 1,
                                    },
                                },
                            },
                        ),
                    ),
                },
            },
        ),
    },
}
